# ixtools

./: .gitignore  LICENCE  README.md  pyproject.toml
ix/: core.py
src/ix/: core.py
src/ix/modules/: __init__.py  image.py  list.py
src/ix/modules/_image_data/: __init__.py  create_desktop.py  delete_desktop.py  list_all_desktops.py  list_appimages.py  list_desktops.py  messages.py
